# gitcoin-allo-contracts

./: Cargo.toml  LICENSE  README.md
src/: fixed_point.rs  lib.rs  quadratic_funding.rs  test.rs
