[package]
name = "gitcoin-allo-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban-optimized Quadratic Funding math engine for OpenDeps"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
